# contorchionist

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  overview.md
core/: CMakeLists.txt
core/include/: core_ap_dct.h  core_ap_linear.h  core_ap_melspectrogram.h  core_ap_mfcc.h  core_ap_monitor.h  core_ap_rfft.h  core_ap_rmsoverlap.h  core_ap_spectrogram.h  core_dp_activation.h  core_dp_linear.h  core_dp_ls2tensor.h  core_dp_mha.h  core_dp_reshape.h  core_dp_sequential.h  core_dp_torchts.h  core_util_conversions.h  core_util_devices.h  core_util_normalizations.h  core_util_tensors.h  core_util_windowing.h
core/src/: core_ap_linear.cpp  core_dp_activation.cpp  core_dp_linear.cpp  core_dp_mha.cpp  core_dp_reshape.cpp  core_dp_sequential.cpp  core_dp_torchts.cpp  core_util_conversions.cpp  core_util_devices.cpp  core_util_normalizations.cpp  core_util_tensors.cpp  core_util_windowing.cpp
doc/: torch.ts_tilde_DSP.md
resources/audio/: audio_credits.md
resources/data/: 20-mfcc-data.txt  mfcc_data_teste.txt  test_dataset.txt  test_files.txt  train_dataset.txt  train_files.txt
resources/ts/: CNN.ts  CNN1.ts  CNN2.ts  CNN3.ts  CNN_192_4096.ts  DspTest.ts  LSTM.ts  OriginalCNN.ts  OriginalLSTM.ts  RouteSignal.ts  caenn_mfcc.ts  class.ts  fft_512_4.ts
tests/: CMakeLists.txt
tests/core_test/: CMakeLists.txt  test_integration.cpp  test_model_manager.cpp  test_model_manager_fixed.cpp  test_model_manager_simple.cpp
tests/core_tests/cpp/: CMakeLists.txt  _test_audio_unit_conversions.cpp  test_device_utils.cpp  test_window_creation.cpp
wrappers/: CMakeLists.txt
wrappers/max/: CMakeLists.txt  Info.plist.in
wrappers/max/help/: torch.rmsoverlap~.maxhelp  torch.spectrogram~.maxhelp
wrappers/max/src/: torch.irfft~.cpp  torch.rfft~.cpp  torch.rmsoverlap~.cpp  torch.spectrogram~.cpp
wrappers/puredata/: CMakeLists.txt  README.md
wrappers/puredata/help/: sigview~.pd  specview.pd  torch.activation-help.pd  torch.circbuffer_test~-help.pd  torch.linear-help.pd  torch.linear~-help.pd  torch.ls2tensor-help.pd  torch.melspectrogram~-help.pd  torch.mfcc~-help.pd  torch.mha-help.pd  torch.reshape-help.pd  torch.rfft~-help.pd  torch.rmsoverlap~-help.pd  torch.sequential-help.pd  torch.spectrogram~-help.pd  torch.ts-help.pd  torch.ts~-help.pd
wrappers/puredata/help/Examples/: CNNClassifier.pd  InstrumentClassification.pd  MFCCAutoencoder.pd
wrappers/puredata/src/: torch.activation.cpp  torch.circbuffer_test~.cpp  torch.irfft~.cpp  torch.linear.cpp  torch.linear~.cpp  torch.ls2tensor.cpp  torch.melspectrogram~.cpp  torch.mfcc~.cpp  torch.mha.cpp  torch.reshape.cpp  torch.rfft~.cpp  torch.rmsoverlap~.cpp  torch.sequential.cpp  torch.spectrogram~.cpp  torch.ts.cpp
wrappers/puredata/utils/include/: pd_arg_parser.h  pd_global_state.h  pd_torch_device_adapter.h  pd_torch_types.h  pd_torch_utils.h
wrappers/puredata/utils/src/: pd_arg_parser.cpp  pd_global_state.cpp  pd_torch_utils.cpp
wrappers/python/: CMakeLists.txt  README.md  pyproject.toml
wrappers/python/examples/: MelSpecCompare.py  README.md  melspectrogram-example.py  rmsoverlap-example.py
wrappers/python/src/pycontorchionist/: __init__.py  pycontorchionist.cpp
wrappers/python/tests/: test_basic.py
wrappers/sc/: CMakeLists.txt
wrappers/sc/schelp/: RMSOverlap.schelp
wrappers/sc/src/: RMSOverlap.cpp  RMSOverlap.sc
